Changelog for CmdArgs

    Improve the purity and annotations a bit, try disabling CSE
    Change the help format
    Rename groupHiden to groupHidden, patch from Matthew Cox
    Bug, missing fields and explicit enums didn't work together
0.2
    #252, add support for grouped flags/modes
    #333, support missing fields
    Add support for reading tuple values (including nested)
    #292, add support for automatic enumerations
    #221, make argpos work with non-string fields
    #222, support opt and args together
    #230, different modes can share short flags
    #295, make verbosity flags explicit
    #231, add support for Maybe
    #256, add --option=false support
    Complete rewrite to introduce Explicit module
0.1.1
    Start of changelog